--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
     </header>
     <nav>
         <div class="secondary-nav">
-            <ul class="secondary-nav-container drop-down-menu">
+            <ul class=" drop-down-menu">
                 <li>
                     <a href="@Url.Content("~/ProductListPage/ProductListHomePage")"><i class="bi bi-geo-alt"></i>探索目的地</a>
                 </li>
