--- a/MIST143_Traveler/wwwroot/css/travelIndex.css
+++ b/MIST143_Traveler/wwwroot/css/travelIndex.css
@@ -489,7 +489,7 @@ ul {
        /* border: #ccc 1px solid;*/
         display: inline-block;
         font-family: 'Open Sans', Arial, sans-serif;
-        font-size: 13px;
+        font-size: 15px;
     }
 
         ul.drop-down-menu li {
@@ -513,7 +513,7 @@ ul {
             display: block;
             padding: 0 20px;
             text-decoration: none;
-            line-height: 20px;
+            line-height: 35px;
         }
 
             ul.drop-down-menu a:hover {
@@ -529,12 +529,12 @@ ul {
         }
 
         ul.drop-down-menu ul {
-         /*   border: #ccc 1px solid;*/
+   /*         border: #ccc 1px solid;*/
             position: absolute;
             z-index: 99;
-          /*  left: -1px;*/
+            left: -1px;
             top: 100%;
-         /*   min-width: 180px;*/
+            min-width: 180px;
         }
 
             ul.drop-down-menu ul li {
@@ -555,7 +555,7 @@ ul {
         ul.drop-down-menu ul {
             /*隱藏次選單*/
             display: none;
-            background-color: white;
+   /*         background-color: white;*/
         }
 
         ul.drop-down-menu li:hover > ul {
