--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <header class="main-header">
         <div class="container">
             <a href="@Url.Content("~/Home/Index")" class="logo">
-                <img src="~/Images/logo2.png" alt="logo圖" />
+                <img src="~/Images/logoRefer.png" alt="logo圖" />
             </a>
 
             <form class="header-search">
