--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -72,7 +72,7 @@
                                 <div class="payTypeRow">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                               id="flexRadioDefault3"  value="3" >
+                                               id="flexRadioDefault3" value="3">
                                         <label class="form-check-label" for="flexRadioDefault2">
                                             LINE Pay
                                         </label>
@@ -85,7 +85,20 @@
                                 <div class="payTypeRow">
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                               id="creditCardRadio" value="4">
+                                               id="flexRadioDefault3" value="4">
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                            歐付寶
+                                        </label>
+                                    </div>
+                                    <div class="logo">
+                                        <img src="~/Images/Shopping/歐付寶.png">
+                                    </div>
+                                </div>
+                                <div class="border-bottom-line"></div>
+                                <div class="payTypeRow">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                               id="creditCardRadio" value="5">
                                         <label class="form-check-label" for="creditCardRadio">
                                             信用卡
                                         </label>
@@ -120,7 +133,7 @@
                                                         <input type="text" class="form-control" id="validYearInput" placeholder="YYYY">
                                                     </div>
                                                     <div class="col-4">
-                                                        <input type="text" class="form-control"  id="securityNumberInput">
+                                                        <input type="text" class="form-control" id="securityNumberInput">
                                                     </div>
                                                 </div>
                                             </div>
@@ -128,7 +141,7 @@
                                         <input class="form-check-input mt-0 " type="checkbox" value=""
                                                aria-label="Checkbox for following text input">
                                         <span>儲存卡片資料至我的帳户，方便下次預訂</span>
-                                        <button type="button" class="btn btn-main"id="creditCardDemoBtn">DEMO</button>
+                                        <button type="button" class="btn btn-main" id="creditCardDemoBtn">DEMO</button>
                                     </div>
                                 </div>
                             </div>
