--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -38,7 +38,7 @@
         </nav>
     </div>
     <div class="main-content search-main-content">
-        <p class="search-result-title">以下是與「 <a id="txt"></a>」的體驗</p>
+        <p class="search-result-title">以下是與「 <a id="txt">@ViewBag.keyword</a>」的體驗</p>
 
 
 
@@ -61,15 +61,15 @@
                                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"name="info[]" value="台灣" id="flexCheckDefault">
+                                                    <input class="form-check-input flexCheckDefault" type="checkbox"name="info[]" value="台灣" >
                                                     <label>台灣</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"name="info[]" value="韓國" id="flexCheckDefault">
+                                                    <input class="form-check-input flexCheckDefault" type="checkbox"name="info[]" value="韓國" >
                                                     <label>韓國</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox"name="info[]" value="日本" id="flexCheckDefault">
+                                                    <input class="form-check-input flexCheckDefault" type="checkbox"name="info[]" value="日本" >
                                                     <label>日本</label>
                                                 </div>
                                             </div>
@@ -297,7 +297,7 @@
             </div>
         </div>
     </div>
-
+    <div class="viewBag d-none">@ViewBag.keyword</div>
 
     @section Scripts{
         @*<script src="http://code.jquery.com/jquery-3.3.0.min.js"></script>
@@ -329,14 +329,17 @@
                 $("#ans").load(url + day + nme);
 
             })*@
-              $("#flexCheckDefault").click(function () {
-                var ii = $("#flexCheckDefault").val();
+            
+            $(".flexCheckDefault").click(function () {
+                var ii = $.map($(".flexCheckDefault:checked"), function (data) {
+                      return data.value;
+                  });
                 var url = "@Url.Content("~/ProductListPage2/see")"
-                  var check = `?contry=${ii}`;
+                var check = `?contry=${ii}`;
                 console.log(ii);
                 $("#ans").load(url + check);
 
-            })
+              })
 
 
             const sel = document.querySelector("#choise");
@@ -351,12 +354,22 @@
 
             })
 
-        $("#btn").click(function () {
-            var qq = $("#text").val()
-            var url = "@Url.Content("~/ProductListPage2/filter")"
-            var name = `?keyword=` + qq
-            $("#ans").load(url + name)
-        })
+            $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+            })
+
+            $(function () {
+                var qq = $(".viewBag").html();
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+            })
+
+
+
         function show(){
             var content = document.getElementById("text");
             document.getElementById("txt").textContent = content.value;
@@ -376,6 +389,7 @@
                 }
                 console.log(arr);
             });
+
             //function happy() {
             //    $.post(`/ProductListPage2/filter`, { keyword: arr }, function (data) {
 
