--- a/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
@@ -47,11 +47,13 @@
 
     </div>
     <form action="~/TransportationPage/TransportationHomePage" method="post">
-        
-        <div>
-            <input type="text" name="keyword" placeholder="請輸入國家目的地"/>
-            <input type="submit" class="btn btn-warning" value="搜尋" onsubmit="myButton()" />
+        <div class="d-flex justify-content-center" >
+            <div class="置中">
+                <input type="text" name="keyword" placeholder="請輸入國家目的地" />
+                <input type="submit" class="btn btn-warning" value="搜尋" onsubmit="myButton()" />
+            </div>
         </div>
+
         <!--<div class="research">
         <div class="wrap">
             <div class="a">
