--- a/MIST143_Traveler/Views/Shared/Components/Productlistpagi/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Productlistpagi/Default.cshtml
@@ -1,5 +1,8 @@
 ﻿@*@model IEnumerable<MIST143_Traveler.Models.TravelProduct>*@
 @using MIST143_Traveler.Models
+@using Microsoft.AspNetCore.Http
+@using System.Text.Json;
+@inject IHttpContextAccessor Accessor
 @model List<TravelProduct>
 
 @{
@@ -8,22 +11,41 @@
 
 
 @{
+    
     <div class="experience-activity-card-section j-experience-activity-card-section desktop">
         @foreach (var item in Model)
-            {
+        {
 
-                string imgurl = item.TravelPictures.Select(p => p.TravelPicture1).FirstOrDefault();
+            string imgurl = item.TravelPictures.Select(p => p.TravelPicture1).FirstOrDefault();
 
             <div class="asdqwr asd">
                 <div class="card" style="">
                     <img class="card-img-top" src="https://localhost:44338/images/TravelProductPictures/@imgurl" alt="Card image cap">
                     <div class="card-body">
-                        <a href="@Url.Action("List" ,"shopping", new {TravelProductId=item.TravelProductId})">
-                            <h3 class="activity-card-title">
-                                @*【領券現折100】Klook獨家優惠｜台北101觀景台門票｜萬聖節搗蛋派對｜高空Sky Lounge百萬夜景*@
-                                @item.TravelProductName
-                            </h3>
-                        </a>
+                        @{
+                            if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
+                            {
+                                var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+                                var v = JsonSerializer.Deserialize<Member>(OBJ);
+                                <a href="@Url.Action("List", "shopping", new { TravelProductId = item.TravelProductId, v.MembersId })">
+                                    <h3 class="activity-card-title">
+                                        @*【領券現折100】Klook獨家優惠｜台北101觀景台門票｜萬聖節搗蛋派對｜高空Sky Lounge百萬夜景*@
+                                        @item.TravelProductName
+                                    </h3>
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="@Url.Action("List" ,"shopping", new {TravelProductId=item.TravelProductId})">
+                                    <h3 class="activity-card-title">
+                                        @*【領券現折100】Klook獨家優惠｜台北101觀景台門票｜萬聖節搗蛋派對｜高空Sky Lounge百萬夜景*@
+                                        @item.TravelProductName
+                                    </h3>
+                                </a>
+                            }
+                        }
+
+
                         <div class="page-activity-recommend-score">
                             <span class="page-activity-recommend-score-number">
                                 <svg width="12" height="12" class="svg-icon"></svg>
@@ -34,7 +56,7 @@
                                 <span class="review-number">30K+ 則評價</span>
                                 )
                             </span>
-                        </div> 
+                        </div>
                         <div class="activity-card-bottom">
                             <div>
                                 <div class="activity-card-price-box home-activity-card_price small-card">
