--- a/MIST143_Traveler/Views/Shopping/ShoppingCartSession.cshtml
+++ b/MIST143_Traveler/Views/Shopping/ShoppingCartSession.cshtml
@@ -75,15 +75,16 @@
                             <div class="rightSide ">
                                 <div class="subInfoText">1件總計 <i class="bi bi-caret-down"></i></div>
                                 <div class="titleFontStyle">NT$ <span id="totalPayPrice"></span></div>
-                                <form action="PayData" method="post">
+                                <form action="test" method="post">
                                     @foreach (var item in Model)
                                     {
-                                        <input type="text" asp-for="FirstOrDefault()._CShoppingCartDetailViewModel.TravelProductId" value="@item.TravelProductId" />
-                                        <input type="text" asp-for="FirstOrDefault()._CShoppingCartDetailViewModel.TravelProductName" value="@item.TravelProductName" />
-                                        <input type="text" asp-for="FirstOrDefault()._CShoppingCartDetailViewModel.Count" value="@item.Count" />
-                                        <input type="text" asp-for="FirstOrDefault()._CShoppingCartDetailViewModel.Price" value="@item.Price" />
-                                        <input type="text" asp-for="FirstOrDefault()._CShoppingCartDetailViewModel.TotalPrice" value="@TotalPrice" />
-                                        <input type="text" asp-for="FirstOrDefault()._CShoppingCartDetailViewModel.Productpicture" value="@item.Productpicture" />
+                                        foreach (var item2 in item._CShoppingCartDetailViewModel)
+                                        {
+                                            <input type="text" asp-for="@item2.TravelProductId" value="@item.TravelProductId" />
+                                            <input type="text" asp-for="@item2.TravelProductName" value="@item.TravelProductName" />
+                                           
+                                        }
+
                                     }
 
                                     <input type="submit" class="btn btn-main my-3 fullSize" id="goPayBtn" value="結帳" />
