--- a/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
@@ -29,9 +29,9 @@
                         {
                             Dow.Add($@"
                                               <div class='card'>
-                                            <img class='card-img-top' src='https://localhost:44338/images/TravelProductPictures/{ab.TravelPicturePath}' alt='Card image cap'>
+                                            <img class='card-img-top' src='https://localhost:44338/images/TravelProductPictures/{ab.TravelPicturePath}' height='120px' alt='Card image cap'>
                                                 <div class='card-body'>
-                                             <a href='/shopping/List?TravelProductId={ab.TravelProductId}'>
+                                             <a href='/shopping/List?TravelProductId={ab.TravelProductId}&MembersId={ab.MembersId}'>
                                              <h3 class='activity-card-title'>
                                                 {ab.TravelProductName}
                                                </h3>
