--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -20,18 +20,19 @@
 
 }
 </script>
+
 <body>
-    @*<form asp-action="/CustomerCenter/uploadImg" method="post" enctype="multipart/form-data">*@
         <article>
-            <div class="container p-5">
+
+            <div class="p-5">
                 <div class="row">
                     <div class="col-12 col-md-3">
-                  
+
                         <div class="card" style="width: 18rem;border:0px;">
                             @{
                                 if (Model.PhotoPath != null)
                                 {
-                                    <label class="btn" >
+                                    <label class="btn">
                                         <input type="file" name="photo" class="form-control" onchange="uploadImg()" id="file" style="display:none" accept="image/*">
                                         <img src="~/Images/客戶大頭貼/@Model.PhotoPath" id="avatarShow" style="width:240px;height:240px;border-radius:50%" />
                                     </label>
@@ -39,7 +40,7 @@
                                 }
                                 else
                                 {
-                                    
+
                                     <label class="btn">
                                         <input type="file" name="photo" class="form-control" onchange="uploadImg()" id="file" style="display:none" accept="image/*">
                                         <img src="~/Images/contact/300.png" id="avatarShow" style="width:240px;height:240px;border-radius:50%" />
@@ -135,7 +136,6 @@
                 </div>
             </div>
         </article>
-    @*</form>*@
 </body>
 
 
