--- a/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
@@ -8,7 +8,7 @@
 
 
 
-<link href="~/css/客服中心.css" rel="stylesheet" />
+@*<link href="~/css/客服中心.css" rel="stylesheet" />*@
 <link href="~/css/客戶中心訂單內容物.css" rel="stylesheet" />
 <link href="~/css/會員中心/優惠券樣式.css" rel="stylesheet" />
 <body>
