--- a/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
@@ -21,7 +21,8 @@
         <h3>我的最愛</h3>
         <div class="container row row-row-4">
             <div class="col-12 上面空間 d-flex justify-content-start">
-                <div class='asd row'>
+                <div class='row'>
+                    
                     @{
                         var i = 0;
                         List<string> Dow = new List<string>();
