--- a/MIST143_Traveler/wwwroot/css/會員中心/我的最愛卡片.css
+++ b/MIST143_Traveler/wwwroot/css/會員中心/我的最愛卡片.css
@@ -12,7 +12,7 @@
     border-bottom: 2px solid rgba(225, 221, 221, 0.622);
 }*/
 /* header的css範圍 */
-.main-header .container {
+/*.main-header .container {
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
@@ -34,8 +34,8 @@
         width: 100%;
         vertical-align: middle;
     }
-
-.main-header .main-nav {
+*/
+/*.main-header .main-nav {
     margin-left: auto;
 }
 
@@ -54,9 +54,9 @@
         .main-header .main-nav a:nth-child(5) {
             background-color: coral;
             color: aliceblue;
-        }
+        }*/
 
-.main-header .header-search {
+/*.main-header .header-search {
     margin-left: 15px;
 }
 
@@ -91,15 +91,15 @@
             border-radius: 100px;
             width: 20em;
             text-indent: 3em;
-        }
+        }*/
 
-.secondary-nav {
+/*.secondary-nav {
     width: 1200px;
     height: 50px;
     margin: auto;
-}
+}*/
 
-.secondary-nav-container {
+/*.secondary-nav-container {
     padding: 15px 0.8em;
 }
 
@@ -119,11 +119,11 @@
 
     .secondary-nav-container li:hover {
         background-color: rgba(200, 198, 198, 0.571);
-    }
+    }*/
 /* header的css範圍 */
 
 /* footer的css範圍 */
-.main-footer {
+/*.main-footer {
     display: flex;
     justify-content: center;
     margin-top: 30px;
@@ -135,9 +135,9 @@
     justify-content: space-between;
     font-size: 12px;
     color: rgb(122, 122, 128);
-}
+}*/
 
-.default-footer_copyright {
+/*.default-footer_copyright {
     width: 250px;
 }
 
@@ -194,45 +194,45 @@
     .footer_paymentInfo li {
         font-size: 40px;
         margin-right: 50px;
-    }
+    }*/
 /* footer的css範圍 */
-.test {
+/*.test {*/
     /* display:flex;*/
-    justify-content: center;
+    /*justify-content: center;*/
 }
 
-.cargimg {
+/*.cargimg {
     margin: auto;
     padding: initial;
 }
 
-.expend_test {
+.expend_test {*/
     /*background: url('category.jpg') no-repeat center center;*/
-    background: url('category.jpg') no-repeat center center;
+    /*background: url('category.jpg') no-repeat center center;
     width: 100%;
 }
 
 .expend_test2 {
     padding: 1000px;
     margin: 500px;
-}
+}*/
 
-.card {
+/*.card {
     margin: 0 auto;
     margin: 2px;
     border-radius: 4px;
-}
+}*/
 
-.asd {
-    display: flex;
+/*.asd {
+    display: flex;*/
     /*align-content: center;*/
-    flex-wrap: wrap;
-    max-width: 1200px;
+    /*flex-wrap: wrap;
+    max-width: 1200px;*/
     /*padding: 40px;*/
-    border:20px;
+    /*border:20px;
     border-block-color:aquamarine;
     
-}
+}*/
 
 .card {
    /* margin: 0 auto;*/
@@ -240,13 +240,13 @@
   /*  height: 310px;*/
 }
 
-img {
+/*img {
     margin-bottom: 8px;
     max-width: 100%;
     
-}
+}*/
 
-.activity-card-title {
+/*.activity-card-title {
     width: 100%;
     font-weight: 600;
     font-size: 16px;
@@ -257,9 +257,9 @@ img {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-}
+}*/
 
-.title {
+/*.title {
     width: 145px;
     position: relative;
     top: 390%;
@@ -283,8 +283,8 @@ img {
     position: relative;
     top: 378%;
     left: 13%;
-}
-
+}*/
+/*
 .page-activity-recommend-score {
     display: -webkit-box;
     display: flex;
@@ -293,8 +293,8 @@ img {
     height: 17px;
     line-height: 17px;
     font-size: 12px;
-}
-
+}*/
+/*
 .page-activity-recommend-score-number {
     border-radius: 8px;
     color: #ff9c00;
@@ -305,9 +305,9 @@ img {
     -webkit-box-align: center;
     align-items: center;
     margin-right: 2px;
-}
+}*/
 
-.svg-icon {
+/*.svg-icon {
     fill: currentColor;
 }
 
@@ -323,13 +323,13 @@ img {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-}
+}*/
 
-.activity-card-bottom {
+/*.activity-card-bottom {
     padding-top: 12px;
-}
+}*/
 
-.activity-card-price-box.small-card {
+/*.activity-card-price-box.small-card {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
@@ -354,8 +354,8 @@ img {
     line-height: 20px;
     color: #757575;
     text-decoration: line-through;
-}
-
+}*/
+/*
 .tagging-wrap {
     overflow: hidden;
 }
@@ -401,35 +401,35 @@ img {
     white-space: pre-wrap;
     word-break: break-all;
 }
-
-.cardimg-top {
+*/
+/*.cardimg-top {
     margin: 0 auto;
     position: absolute;
     display: flex;
     
-}
+}*/
 
-.cardsize {
+/*.cardsize {
     text-align: center;
     margin: 0 auto;
     width: 50px;
     height: 20px;
 }
-
-.experience-menu-name {
+*/
+/*.experience-menu-name {*/
     /*   
     margin: auto;
     padding: 10px;
     height: 20px;*/
-    width: 54px;
+    /*width: 54px;
     text-align: center;
     margin: 40px auto;
     display: inline-block;
-    padding: 20px 10px;
+    padding: 20px 10px;*/
     /*    line-height: 30px;*/
-}
+/*}*/
 
-.rwd-experience-header-main-container {
+/*.rwd-experience-header-main-container {
     position: relative;
     margin: 0 auto;
     height: 100%;
@@ -525,14 +525,14 @@ img {
     height: 16px;
 }
 
-.desktop {
+.desktop {*/
     /*display: flex;*/
-    margin-top: 20px;
+    /*margin-top: 20px;
     margin: auto;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 400;*/
     /*line-height: 16.1px;*/
-}
+/*}
 
 .rwd-header-search-box-desktop {
     margin-top: 20px;
@@ -656,9 +656,9 @@ img {
 
     .destination-tips-new .destination-tips_link {
         margin: 0;
-    }
+    }*/
 
-
+/*
 
 .experience-activity-card-section.desktop {
     margin-top: 25px;
@@ -666,9 +666,9 @@ img {
 
 .experience-activity-card-section {
     margin-top: 72px;
-}
+}*/
 
-html,
+/*html,
 body {
     height: 100%;
 }
@@ -850,9 +850,9 @@ b, strong {
 }
 
 .flgd {
-    width: 300px;
+    width: 300px;*/
     /*    border:3px solid red;*/
-    padding: 10px;
+    /*padding: 10px;
     margin: 10px 10px 10px 10px;
     float: right;
 }
@@ -872,4 +872,4 @@ b, strong {
 
 .myMOUSE {
     cursor: pointer;
-}
+}*/
